<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    style="@style/LauncherFragmentStyle"
    android:background="@drawable/gradient_background_frontpage">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/launcher_icon"
        android:contentDescription="@string/content_description_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnRegister"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tvAppName"
            style="@style/LauncherSubjectStyle"
            android:textSize="@dimen/launcherAppName"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/ButtonStyle"
        android:layout_above="@id/btnLogin"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:background="?android:selectableItemBackground"
        android:text="@string/login" />


</RelativeLayout>