<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultActivityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.com.example.android.cloudpad_app.FeedbackActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/feedback_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorLight"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/spinner"
        android:layout_above="@+id/btnSend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="top|start"
        android:hint="@string/feedback_hint_description"
        android:textSize="@dimen/text_text_size" />

    <Button
        android:id="@+id/btnSend"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:text="@string/feedback_send" />
</RelativeLayout>
